# docs/swagger.json
@@ -34,6 +34,35 @@
                 }
             }
         },
+        "/api/car/csv": {
+            "post": {
+                "description": "Create cars from CSV",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "car"
+                ],
+                "summary": "Create cars from CSV",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "CSV file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/car/{hsn}": {
             "get": {
                 "description": "Get car by hsn",
